[gd_scene load_steps=17 format=3 uid="uid://ep42i3b81pge"]

[ext_resource type="Texture2D" uid="uid://baagk8ybyap7v" path="res://Art/labBackground.png" id="1_5w8o2"]
[ext_resource type="Script" uid="uid://vmvstmsvais1" path="res://Scripts/victory_platters.gd" id="2_hy2iw"]
[ext_resource type="Script" uid="uid://n7ifhy5pyxvv" path="res://Scripts/PoolTable.gd" id="3_3pgh2"]
[ext_resource type="PackedScene" uid="uid://cm3s5wfy8i2m2" path="res://Scenes/Distiller.tscn" id="3_8rfpd"]
[ext_resource type="PackedScene" uid="uid://bm6ngc1vcib3j" path="res://Scenes/stone_node.tscn" id="3_hy2iw"]
[ext_resource type="Texture2D" uid="uid://dtso6cyc6j6ts" path="res://Art/Platter_0.png" id="3_jyg0h"]
[ext_resource type="Script" uid="uid://c58y4snmx4lnf" path="res://Scripts/table.gd" id="3_mal3i"]
[ext_resource type="FontFile" uid="uid://d1afp5wh7pgws" path="res://Fonts/Myfontrunes-Regular.ttf" id="4_8i3le"]
[ext_resource type="PackedScene" uid="uid://dbefdrmk7jxqo" path="res://Scenes/stones_in_hand.tscn" id="4_8rfpd"]
[ext_resource type="Texture2D" uid="uid://cmn6h0h3ftmpd" path="res://Art/Rock.png" id="6_dx4c7"]
[ext_resource type="Texture2D" uid="uid://ckwbr5dnmeha1" path="res://Art/Platter_1.png" id="6_pw14o"]
[ext_resource type="Texture2D" uid="uid://banjx7tsqjwsy" path="res://Art/Platter_2.png" id="7_e1qhq"]
[ext_resource type="Texture2D" uid="uid://cn3pmr8y6broy" path="res://Art/Platter_3.png" id="8_3nxcu"]
[ext_resource type="Texture2D" uid="uid://d0du6m6i1kna2" path="res://Art/Platter_4.png" id="9_njuav"]
[ext_resource type="PackedScene" uid="uid://oasg2w60rc6n" path="res://Scenes/nav_button.tscn" id="15_pw14o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ec13"]
size = Vector2(79, 46)

[node name="LabScene" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(563.64594, 323.25003)
scale = Vector2(0.694271, 0.6942709)
texture = ExtResource("1_5w8o2")

[node name="VictoryPlatters" type="Node2D" parent="." node_paths=PackedStringArray("stone_nodes", "labels", "platters")]
script = ExtResource("2_hy2iw")
stone_nodes = [NodePath("Platter_0/StoneNode"), NodePath("Platter_1/StoneNode"), NodePath("Platter_2/StoneNode"), NodePath("Platter_3/StoneNode"), NodePath("Platter_4/StoneNode")]
labels = [NodePath("Platter_0/Label"), NodePath("Platter_1/Label"), NodePath("Platter_2/Label"), NodePath("Platter_3/Label"), NodePath("Platter_4/Label")]
platters = [NodePath("Platter_0/Sprite2D"), NodePath("Platter_1/Sprite2D2"), NodePath("Platter_2/Sprite2D3"), NodePath("Platter_3/Sprite2D4"), NodePath("Platter_4/Sprite2D5")]

[node name="Platter_0" type="Area2D" parent="VictoryPlatters"]

[node name="Sprite2D" type="Sprite2D" parent="VictoryPlatters/Platter_0"]
position = Vector2(872.99994, 91)
scale = Vector2(0.6854167, 0.68541664)
texture = ExtResource("3_jyg0h")

[node name="Button" type="CollisionShape2D" parent="VictoryPlatters/Platter_0"]
position = Vector2(873.5, 67.5)
shape = SubResource("RectangleShape2D_3ec13")

[node name="StoneNode" parent="VictoryPlatters/Platter_0" instance=ExtResource("3_hy2iw")]
position = Vector2(873, 62)
scale = Vector2(0.8, 0.8)

[node name="Label" type="Label" parent="VictoryPlatters/Platter_0"]
offset_left = 846.0
offset_top = 88.0
offset_right = 897.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0.27752772, 0.27752772, 0.27752772, 1)
theme_override_colors/font_shadow_color = Color(0.74509805, 0.74509805, 0.74509805, 0.7294118)
theme_override_fonts/font = ExtResource("4_8i3le")
theme_override_font_sizes/font_size = 48
text = "@"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Platter_1" type="Area2D" parent="VictoryPlatters"]
position = Vector2(169, 4)

[node name="Sprite2D2" type="Sprite2D" parent="VictoryPlatters/Platter_1"]
position = Vector2(876, 87)
scale = Vector2(0.6854167, 0.68541664)
texture = ExtResource("6_pw14o")

[node name="Button" type="CollisionShape2D" parent="VictoryPlatters/Platter_1"]
position = Vector2(873.5, 67.5)
shape = SubResource("RectangleShape2D_3ec13")

[node name="StoneNode" parent="VictoryPlatters/Platter_1" instance=ExtResource("3_hy2iw")]
position = Vector2(873, 62)
scale = Vector2(0.8, 0.8)

[node name="Label" type="Label" parent="VictoryPlatters/Platter_1"]
offset_left = 848.0
offset_top = 84.0
offset_right = 899.0
offset_bottom = 126.0
theme_override_colors/font_color = Color(0.27752772, 0.27752772, 0.27752772, 1)
theme_override_colors/font_shadow_color = Color(0.74509805, 0.74509805, 0.74509805, 0.7294118)
theme_override_fonts/font = ExtResource("4_8i3le")
theme_override_font_sizes/font_size = 48
text = "@"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Platter_2" type="Area2D" parent="VictoryPlatters"]
position = Vector2(-15, 125)

[node name="Sprite2D3" type="Sprite2D" parent="VictoryPlatters/Platter_2"]
position = Vector2(873, 91)
scale = Vector2(0.6854167, 0.68541664)
texture = ExtResource("7_e1qhq")

[node name="Button" type="CollisionShape2D" parent="VictoryPlatters/Platter_2"]
position = Vector2(875, 64)
shape = SubResource("RectangleShape2D_3ec13")

[node name="StoneNode" parent="VictoryPlatters/Platter_2" instance=ExtResource("3_hy2iw")]
position = Vector2(873, 62)
scale = Vector2(0.8, 0.8)

[node name="Label" type="Label" parent="VictoryPlatters/Platter_2"]
offset_left = 843.0
offset_top = 97.0
offset_right = 894.0
offset_bottom = 139.0
theme_override_colors/font_color = Color(0.27752772, 0.27752772, 0.27752772, 1)
theme_override_colors/font_shadow_color = Color(0.74509805, 0.74509805, 0.74509805, 0.7294118)
theme_override_fonts/font = ExtResource("4_8i3le")
theme_override_font_sizes/font_size = 48
text = "@"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Platter_3" type="Area2D" parent="VictoryPlatters"]
position = Vector2(102, 125)

[node name="Sprite2D4" type="Sprite2D" parent="VictoryPlatters/Platter_3"]
position = Vector2(878, 90)
scale = Vector2(0.6854167, 0.68541664)
texture = ExtResource("8_3nxcu")

[node name="Button" type="CollisionShape2D" parent="VictoryPlatters/Platter_3"]
position = Vector2(875, 64)
shape = SubResource("RectangleShape2D_3ec13")

[node name="StoneNode" parent="VictoryPlatters/Platter_3" instance=ExtResource("3_hy2iw")]
position = Vector2(878, 63)
scale = Vector2(0.8, 0.8)

[node name="Label" type="Label" parent="VictoryPlatters/Platter_3"]
offset_left = 859.0
offset_top = 92.0
offset_right = 910.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0.27752772, 0.27752772, 0.27752772, 1)
theme_override_colors/font_shadow_color = Color(0.74509805, 0.74509805, 0.74509805, 0.7294118)
theme_override_fonts/font = ExtResource("4_8i3le")
theme_override_font_sizes/font_size = 48
text = "@"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Platter_4" type="Area2D" parent="VictoryPlatters"]
position = Vector2(210, 128)

[node name="Sprite2D5" type="Sprite2D" parent="VictoryPlatters/Platter_4"]
position = Vector2(886, 86)
scale = Vector2(0.6854167, 0.68541664)
texture = ExtResource("9_njuav")

[node name="Button" type="CollisionShape2D" parent="VictoryPlatters/Platter_4"]
position = Vector2(876.5, 65)
shape = SubResource("RectangleShape2D_3ec13")

[node name="StoneNode" parent="VictoryPlatters/Platter_4" instance=ExtResource("3_hy2iw")]
position = Vector2(878, 63)
scale = Vector2(0.8, 0.8)

[node name="Label" type="Label" parent="VictoryPlatters/Platter_4"]
offset_left = 865.0
offset_top = 92.0
offset_right = 916.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0.27752772, 0.27752772, 0.27752772, 1)
theme_override_colors/font_shadow_color = Color(0.74509805, 0.74509805, 0.74509805, 0.7294118)
theme_override_fonts/font = ExtResource("4_8i3le")
theme_override_font_sizes/font_size = 48
text = "@"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Table" type="Node2D" parent="." node_paths=PackedStringArray("tableCorners", "stone_pool", "shadow")]
script = ExtResource("3_mal3i")
tableCorners = [NodePath("TableCornerTL"), NodePath("TableCornerTR"), NodePath("TableCornerBL"), NodePath("TableCornerBR")]
stone_pool = NodePath("StonePool")
shadow = NodePath("MouseShadow")

[node name="MouseShadow" type="Sprite2D" parent="Table"]
modulate = Color(0, 0, 0, 0.09803922)
position = Vector2(-0.5, 1)
scale = Vector2(0.5390625, 0.28125)
texture = ExtResource("6_dx4c7")

[node name="Distiller" parent="Table" instance=ExtResource("3_8rfpd")]

[node name="StonePool" type="Node2D" parent="Table"]
script = ExtResource("3_3pgh2")

[node name="TableCornerTL" type="Node2D" parent="Table"]
position = Vector2(16, 391)

[node name="TableCornerTR" type="Node2D" parent="Table"]
position = Vector2(1141, 389)

[node name="TableCornerBL" type="Node2D" parent="Table"]
position = Vector2(-127, 642)

[node name="TableCornerBR" type="Node2D" parent="Table"]
position = Vector2(1268, 638)

[node name="Area2D" type="Area2D" parent="Table"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Table/Area2D"]
polygon = PackedVector2Array(20, 411, 392, 411, 473, 434, 679, 430, 767, 403, 1120, 406, 1126, 630, 20, 629)

[node name="StonesInHand" parent="." instance=ExtResource("4_8rfpd")]

[node name="NavButton" parent="." instance=ExtResource("15_pw14o")]
position = Vector2(201, 36)

[connection signal="input_event" from="VictoryPlatters/Platter_0" to="VictoryPlatters" method="_on_platter_0_input_event"]
[connection signal="input_event" from="VictoryPlatters/Platter_1" to="VictoryPlatters" method="_on_platter_1_input_event"]
[connection signal="input_event" from="VictoryPlatters/Platter_2" to="VictoryPlatters" method="_on_platter_2_input_event"]
[connection signal="input_event" from="VictoryPlatters/Platter_3" to="VictoryPlatters" method="_on_platter_3_input_event"]
[connection signal="input_event" from="VictoryPlatters/Platter_4" to="VictoryPlatters" method="_on_platter_4_input_event"]
[connection signal="input_event" from="Table/Area2D" to="Table" method="_on_table_input_event"]
[connection signal="mouse_entered" from="Table/Area2D" to="Table" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Table/Area2D" to="Table" method="_on_area_2d_mouse_exited"]
